package com.pdiosquez.flight_booking_api.domain.model;

public enum BookingStatus {
    CONFIRMED,
    CANCELLED,
}
